--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">343175249432062</string>
+    <string name="fb_login_protocol_scheme">fb343175249432062</string>
 </resources>
